--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.5.15",
+    "@types/zxcvbn": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "babel-loader": "^9.1.2",
@@ -82,5 +83,10 @@
     "replace-in-file": "^6.3.5",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0"
+  },
+  "dependencies": {
+    "copy-to-clipboard": "^3.3.3",
+    "react-use-precision-timer": "^3.3.1",
+    "zxcvbn": "^4.4.2"
   }
 }
