--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "coreVersion": "2.4.11",
   "author": "Justin Mahar <contact@justinmahar.com>",
-  "description": "🔑 An opinionated but fun password generator. Generate silly passwords that are easy to remember.",
+  "description": "🔑 Generate silly passwords that are secure and easy to use.",
   "homepage": "https://justinmahar.github.io/react-kindling/",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -68,6 +68,9 @@
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "babel-loader": "^9.1.2",
+    "bootstrap": "^5.2.3",
+    "classnames": "^2.3.2",
+    "copy-to-clipboard": "^3.3.3",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -77,16 +80,16 @@
     "lockblocks": "^1.1.1",
     "prettier": "^2.8.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-html-props": "^1.0.32",
     "react-markdown": "^8.0.3",
+    "react-use-precision-timer": "^3.3.1",
     "replace-in-file": "^6.3.5",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0"
   },
   "dependencies": {
-    "copy-to-clipboard": "^3.3.3",
-    "react-use-precision-timer": "^3.3.1",
     "zxcvbn": "^4.4.2"
   }
 }
