--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-dom": "^17.0.2",
     "react-html-props": "^1.0.32",
     "react-markdown": "^8.0.3",
+    "react-storage-complete": "^1.0.6",
     "react-use-precision-timer": "^3.3.1",
     "replace-in-file": "^6.3.5",
     "typescript": "^4.9.4",
