Update README and description

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.10",
   "coreVersion": "2.4.11",
   "author": "Justin Mahar <contact@justinmahar.com>",
-  "description": "🔑 Generate silly passwords that are secure and easy to use.",
+  "description": "🔑 Generate silly passwords that are secure and easy to use. Inspired by xkcd.",
   "homepage": "https://justinmahar.github.io/react-kindling/",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
