--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-html-props": "^1.0.32",
+    "react-icons": "^4.7.1",
     "react-markdown": "^8.0.3",
     "react-storage-complete": "^1.0.6",
     "react-use-precision-timer": "^3.3.1",
