--- a/package.json
+++ b/package.json
@@ -28,20 +28,22 @@
     "url": "https://github.com/justinmahar/react-kindling/issues"
   },
   "keywords": [
+    "silly",
     "password",
     "generator",
-    "silly",
-    "generate",
-    "maker",
-    "creator",
-    "security",
-    "fun",
     "pass",
-    "keypass",
     "passcode",
     "passphrase",
-    "phrase",
+    "creator",
+    "fun",
+    "generate",
+    "maker",
     "manager",
+    "phrase",
+    "salt",
+    "security",
+    "xkcd",
+    "zxcvbn",
     "dashlane",
     "1password",
     "1pass",
